--- a/habilidades.html
+++ b/habilidades.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Habilidades - Gabriel Antunes</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="Imagens/favicon.png" type="image/png">
+    <link rel="icon" href="imagens/favicon.png" type="image/png">
 </head>
 <style>
   .skills-section {
