--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículo - Gabriel Antunes</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="Imagens/favicon.png" type="image/png">
+    <link rel="icon" href="imagens/favicon.png" type="image/png">
 </head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
