--- a/projetos.html
+++ b/projetos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos - Gabriel Antunes</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="Imagens/favicon.png" type="image/png">
+    <link rel="icon" href="imagens/favicon.png" type="image/png">
 </head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 <body>
     <section id="projetos" class="center sombra animacao">
   <h2>🚀 Projetos</h2>
-  <p>Alguns dos trabalhos que desenvolvi com dedicação e aprendizado contínuo:</p>
+  <p>Alguns dos trabalhos que desenvolvi com dedicação e aprendizado contínuo</p>
 
   <div class="projetos-grid">
     <div class="projeto-card">
@@ -23,7 +23,7 @@
     </div>
 
     <div class="projeto-card">
-      <h3>Calculadora de média de notas</h3>
+      <h3>Calculadora de Média de Notas</h3>
       <p>Projeto simples para calcular a média de notas de alunos</p>
       <a href="https://github.com/antunesdvz/calculadora-de-medias-py" target="_blank">🔗 Ver no GitHub</a>
     </div>
