--- a/contato.html
+++ b/contato.html
@@ -20,6 +20,7 @@
     <a href="https://www.linkedin.com/in/gabriel-antunesdv/" target="_blank">🔗 LinkedIn</a>
     <a href="https://github.com/antunesdvz" target="_blank">💻 GitHub</a>
     <a href="https://wa.me/554691192399" target="_blank">📞 WhatsApp</a>
+    <a href="https://www.instagram.com/antunesdvz/" target="_blank">📷 Instagram</a>
   </div>
 </section>
 
